--- a/mycv_app/templates/components/navbar.html
+++ b/mycv_app/templates/components/navbar.html
@@ -19,14 +19,14 @@
                 <nav class="s-header__nav">
 
                     <ul class="s-header__menu-links">
-                        <li><a href="#about">Profile</a></li>
+                        <li><a href="#about">Profil</a></li>
                         <li><a href="#berita">Berita</a></li>
                         <!-- <li><a href="blog.html">Journal</a></li>
                         <li><a href="contact.html">Contact</a></li> -->
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
-                        <a href="contact.html" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>
+                        <a href="contact.html" class="btn btn--primary s-header__contact-btn">Hubungi Saya</a>
                     </div> <!-- s-header__contact -->
 
                 </nav> <!-- end s-header__nav -->
