--- a/mycv_app/templates/components/profile.html
+++ b/mycv_app/templates/components/profile.html
@@ -8,18 +8,18 @@
                     <div class="column lg-12 s-intro__content-inner grid-block">
 
                         <div class="s-intro__content-text">
-                            <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Adam</div>
+                            <div class="s-intro__content-pretitle text-pretitle">Halo, Saya Adam</div>
                             <h1 class="s-intro__content-title">
-                                I create web <br>
-                                for your <br>
-                                business <br>
+                                Saya dapat membuat web<br>
+                                untuk bisnis<br>
+                                anda<br>
                                 <!-- results. -->
                             </h1>
                         </div> <!-- s-intro__content-text -->
 
                         <div class="s-intro__content-media">
                             <div class="s-intro__content-media-inner">
-                                <img src="{% static 'images/none.png' %}" alt="">
+                                <img src="{% static 'images/IMG20170729151853.jpg' %}" alt="">
                                 <div class="lines">
                                     <span></span>
                                 </div>
@@ -37,7 +37,7 @@
                                         <line x1="12" y1="18" x2="12" y2="6"></line>
                                     </svg>
                                 </div>
-                                <span>Scroll for more</span>
+                                <span>scroll untuk lanjut</span>
                             </a>
                         </div> <!-- s-intro__scroll-down -->
 
@@ -46,3 +46,72 @@
                 </div> <!-- s-intro__content -->
 
             </section> <!-- end s-intro -->
+
+            <!-- expertise
+            ----------------------------------------------- -->
+            <section id="expertise" class="s-expertise">
+
+                <div class="row s-expertise__content width-sixteen-col">
+                    <div class="column xl-12 grid-block grid-section-split">
+
+                        <div class="section-header grid-section-split__header">
+                            <div class="text-pretitle">Keahlian</div>
+                            <h2 class="text-display-title">
+                                Bidang keahlian yang saya.
+                            </h2>
+
+                            <!-- <p class="lead">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum suscipit debitis quam
+                                dignissimos veritatis atque pariatur magnam obcaecati fugit reprehenderit vel numquam
+                                facere esse est deserunt, perferendis commodi voluptatem similique.
+                            </p> -->
+                        </div> <!-- end section-header -->
+
+                        <div class="s-expertise__content-main grid-section-split__primary">
+
+                            <div class="grid-list-items list-items show-ctr">
+                                <div class="grid-list-items__item list-items__item">
+                                    <div class="grid-list-items__title list-items__item-header">
+                                        <h3 class="list-items__item-title">Frontend</h3>
+                                    </div>
+                                    <div class="grid-list-items__text list-items__item-text">
+                                    
+                                    </div>
+                                </div> <!-- list-item -->
+                                <div class="grid-list-items__item list-items__item">
+                                    <div class="grid-list-items__title list-items__item-header">
+                                        <h3 class="list-items__item-title">Backend</h3>
+                                    </div>
+                                    <div class="grid-list-items__text list-items__item-text">
+                                    
+                                    </div>
+                                </div> <!-- list-expertise__item -->
+                                <div class="grid-list-items__item list-items__item">
+                                    <div class="grid-list-items__title list-items__item-header">
+                                        <h3 class="list-items__item-title">Web Design</h3>
+                                    </div>
+                                    <div class="grid-list-items__text list-items__item-text">
+                                    
+                                    </div>
+                                </div> <!-- list-expertise__item -->
+                                <div class="grid-list-items__item list-items__item">
+                                    <div class="grid-list-items__title list-items__item-header">
+                                        <h3 class="list-items__item-title">Research & Discovery</h3>
+                                    </div>
+                                    <div class="grid-list-items__text list-items__item-text">
+                                     
+                                    </div>
+                                </div> <!-- list-expertise__item -->
+
+                            </div> <!-- grid-list-items -->
+                        </div> <!-- end s-expertise__content-main -->
+
+                        <!-- <div class="s-expertise__content-btn grid-section-split__bottom">
+                            <a href="services.html" class="btn btn--stroke u-fullwidth">View All Services</a>
+                        </div>  -->
+                        <!-- end s-about__content-btn -->
+
+                    </div> <!-- end grid-block-->
+                </div> <!-- end s-expertise__content -->
+
+            </section> <!-- end s-expertise -->
