--- a/mycv_app/templates/components/review.html
+++ b/mycv_app/templates/components/review.html
@@ -7,9 +7,9 @@
                     <div class="column xl-12 grid-block grid-section-split">
 
                         <div class="section-header grid-section-split__header">
-                            <div class="text-pretitle">Coworker</div>
+                            <div class="text-pretitle">Buku Tamu</div>
                             <h2 class="text-display-title">
-                                I have had the privilege of working with these incredible friends.
+                                Terima kasih sudah mengunjungi website ini
                             </h2>
                         </div> <!-- end section-header -->
                     </div> <!-- end column -->
@@ -30,7 +30,7 @@
                                     <div class="testimonials__author">
                                         <!-- <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar"> -->
                                         <cite class="testimonials__cite">
-                                            <strong>{{item.nama}}</strong>
+                                            <strong>{{item.nama}} - {{item.profesi}}</strong>
                                             <span>{{item.email}}</span>
                                         </cite>
                                     </div>
