--- a/mycv_app/templates/components/footer.html
+++ b/mycv_app/templates/components/footer.html
@@ -25,32 +25,12 @@
                         <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
                     </ul>
                 </div> -->
-                <div class="column xl-3 lg-6 md-12 tab-12 s-footer__block s-footer__newsletter">
-                    <h3>Newsletter</h3>
-
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere ratione dignissimos.
-                    </p>
-
-                    <div class="subscribe-form">
-                        <form id="mc-form" class="mc-form">
-                            <input type="email" name="EMAIL" id="mce-EMAIL" class="u-fullwidth text-center"
-                                placeholder="Your Email Address"
-                                title="The domain portion of the email address is invalid (the portion after the @)."
-                                pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$"
-                                required>
-                            <input type="submit" name="subscribe" value="Subscribe"
-                                class="btn btn--primary btn--small u-fullwidth">
-                            <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cdb7b577e41181934ed6a6a44_9a91cfe7b3" tabindex="-1" value=""></div> -->
-                            <div class="mc-status"></div>
-                        </form>
-                    </div>
-                </div>
+                
             </div>
 
             <div class="row s-footer__bottom">
                 <div class="column xl-6 lg-12">
-                    <ul class="s-footer__social social-list">
+                    <!-- <ul class="s-footer__social social-list">
                         <li>
                             <a href="#0">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -99,15 +79,10 @@
                                 <span class="u-screen-reader-text">Dribbble</span>
                             </a>
                         </li>
-                    </ul> <!-- end s-footer__social -->
+                    </ul>  -->
+                    <!-- end s-footer__social -->
                 </div>
-                <div class="column xl-6 lg-12">
-                    <p class="ss-copyright">
-                        <span>© Copyright Monica 2022</span>
-                        <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a
-                                href="https://themewagon.com">ThemeWagon</a></span>
-                    </p>
-                </div>
+                
 
                 <div class="ss-go-top">
                     <a class="smoothscroll" title="Back to Top" href="#top">
@@ -118,7 +93,8 @@
                             <line x1="12" y1="18" x2="12" y2="6"></line>
                         </svg>
                     </a>
-                </div> <!-- end ss-go-top -->
+                </div> 
+                <!-- end ss-go-top -->
             </div>
 
         </footer> <!-- end s-footer -->
