--- a/mycv_app/templates/components/header.html
+++ b/mycv_app/templates/components/header.html
@@ -8,7 +8,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Monica</title>
+    <title>Adam Muhammad</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
