--- a/mycv_app/templates/components/navbar.html
+++ b/mycv_app/templates/components/navbar.html
@@ -7,20 +7,22 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <h3 style="color: var(--color-3); margin: 0;">Adam</h3>
                         <!-- <a class="logo" href="{% url 'landing' %}">
                             <img src="{% static 'images/logo.svg' %}" alt="Homepage">
                         </a> -->
                     </div>
-
+                    
                     <a class="s-header__menu-toggle" href="#0"><span>Menu</span></a>
                 </div> <!-- end s-header__block -->
-
+                
                 <nav class="s-header__nav">
+                    <h3 style="color: var(--color-3); margin: 0;">Adam</h3>
 
                     <ul class="s-header__menu-links">
                         <li><a href="#about">Profil</a></li>
                         <li><a href="#berita">Berita</a></li>
+                        <li><a href="#clients">Buku Tamu</a></li>
+                        <li><a href="#form">Form Tamu</a></li>
                         <!-- <li><a href="blog.html">Journal</a></li>
                         <li><a href="contact.html">Contact</a></li> -->
                     </ul> <!-- s-header__menu-links -->
