--- a/mycv_app/templates/components/form.html
+++ b/mycv_app/templates/components/form.html
@@ -1,5 +1,5 @@
 {% load static %}
-    <section id="intro" class="s-cta p-5">
+    <section id="form" class="s-cta p-5">
         <h4 class="s-intro__content-title">
             kata-kata yang anda berikan sangat berharga untuk apresiasi, membangun inspirasi dan semangat bersama!
         </h4>
