--- a/mycv_app/templates/components/profile.html
+++ b/mycv_app/templates/components/profile.html
@@ -8,7 +8,7 @@
                     <div class="column lg-12 s-intro__content-inner grid-block">
 
                         <div class="s-intro__content-text">
-                            <div class="s-intro__content-pretitle text-pretitle">Halo, Saya Adam</div>
+                            <div class="s-intro__content-pretitle text-pretitle">Halo, Saya Adam Muhammad</div>
                             <h1 class="s-intro__content-title">
                                 Saya dapat membuat web<br>
                                 untuk bisnis<br>
